@@ -1,4 +1,4 @@
-graphene sheet
+H2 + graphene sheet
 
    &CONTROL
       calculation = 'scf',
